--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -41,7 +41,30 @@
   color: #888;
 }
 
-.li{
+li{
   margin-bottom: 10px;
   padding: 20px;
+}
+
+
+textarea{
+  padding:10px;
+  height:200px;
+  background-color:hsla(0, 7%, 94%, 0.144);
+  margin-top:20px;
+}
+
+input[type=text]{
+  padding:10px;
+  height:50px;
+}
+
+.handlePostBtn{
+  margin-top:20px;
+}
+
+button:hover{
+
+  border: 0.5px solid amber;
+  transition: 0.5s ease-in-out;
 }
